--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<ul class="links">
 					<li><a href="index.html">homeeee</a></li>
 					<li><a href="generic.html">Generics</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="elements.html">man</a></li>
 				</ul>
 			</nav>
 
